--- a/main.css
+++ b/main.css
@@ -1,106 +1,47 @@
-::selection {
-  background: #FF5E99;
-}
-html, body {
-  width: 100%;
+
+.wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url('bg.jpg');
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  text-align: center;
+  text-rendering: optimizeLegibility;
   height: 100%;
-  margin: 0;
-}
-body {
-  font-size: 11pt;
-  font-family: Inconsolata, monospace;
-  color: white;
-  background-color: black;
-}
-#container {
-  padding: .1em 1.5em 1em 1em;
-}
-#container output {
-  clear: both;
-  width: 100%;
-}
-#container output h3 {
-  margin: 0;
-}
-#container output pre {
-  margin: 0;
-}
-.input-line {
-  display: -webkit-box;
-  -webkit-box-orient: horizontal;
-  -webkit-box-align: stretch;
-  display: -moz-box;
-  -moz-box-orient: horizontal;
-  -moz-box-align: stretch;
-  display: box;
-  box-orient: horizontal;
-  box-align: stretch;
-  clear: both;
-}
-.input-line > div:nth-child(2) {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-}
-.prompt {
-  white-space: nowrap;
-  color: #96b38a;
-  margin-right: 7px;
-  display: -webkit-box;
-  -webkit-box-pack: center;
-  -webkit-box-orient: vertical;
-  display: -moz-box;
-  -moz-box-pack: center;
-  -moz-box-orient: vertical;
-  display: box;
-  box-pack: center;
-  box-orient: vertical;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-.cmdline {
-  outline: none;
-  background-color: transparent;
-  margin: 0;
-  width: 100%;
-  font: inherit;
-  border: none;
-  color: inherit;
-}
-.ls-files {
-  height: 45px;
-  -webkit-column-width: 100px;
-  -moz-column-width: 100px;
-  -o-column-width: 100px;
-  column-width: 100px;
 }
 
+.name{
+  font-size: 50px;
+}
 
-/************************************************************/
-/* SVG Clock                                                */
-/************************************************************/
-
-.clock-container {
-  display: none /*inline-block*/;
+.info {
+  font-family: 'Red Hat Display', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  width: 200px;
-  vertical-align: middle;
-  overflow: hidden;
-} 
-
-.clock-container > svg > circle {
-  stroke-width: 2px;
-  stroke: #fff;
 }
 
-.hour, .min, .sec { 
-  stroke-width: 1px;
-  fill: #333;
-  stroke: #555;
+.text {
+  position: relative;
+  top:50%;
+  transform: translate(0, -50%);
 }
 
-.sec {
-   stroke: #f55;
+@media (max-width: 600px) {
+  .info {
+    font-size: 30px;
+    letter-spacing: 0.2em;
+  }
 }
-
+@media (max-width: 400px) {
+  .info {
+    margin-top: 20px;
+    font-size: 24px;
+    letter-spacing: 0.1em;
+  }
+}
